# betapert

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini  triage_decisions.db
.github/workflows/: ci.yml  publish.yml  pytest-poetry.yml
betapert/: __init__.py  funcs.py
docs/: generate_pdf_shapes.py
reviews_triage/: pr-6-feedback-20260703-071055.json
tests/: test_degenerate_modes.py  test_fit.py  test_frozen.py  test_generalization.py  test_moments_entropy.py  test_mpert_parametrized.py  test_parametrized.py  test_ppf_log_fallback.py  test_properties.py  test_reference_values.py  test_special_cases.py  test_vectorized_params.py
