[tool]
[tool.poetry]
name = "betapert"
version = "0.1.5"
homepage = "https://github.com/tadamcz/betapert"
description = "Top-level package for beta-PERT distribution."
authors = ["Tom Adamczewski <tadamczewskipublic@gmail.com>"]
readme = "README.md"
classifiers=[
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "betapert" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
bump2version = "*"
coverage = "*"
pytest = ">=7.2.0"
black = {extras = ["d"], version = "*"}
pytest-pycharm = "^0.7.0"
matplotlib = "^3.9.0"



[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
