[project]
name = "beta-pert-dist-scipy"
version = "0.3.0"
description = "The PERT (beta-PERT) and modified PERT probability distributions for SciPy."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tom Adamczewski", email = "tadamczewskipublic@gmail.com" },
    { name = "Harold Martin", email = "harold.martin@gmail.com" },
]
keywords = ["pert", "beta-pert", "distribution", "scipy", "statistics", "risk", "uncertainty"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "numpy!=2.5.0",
    "scipy>=1.14.1",
]

[project.urls]
Homepage = "https://github.com/hbmartin/betapert"
Repository = "https://github.com/hbmartin/betapert"
Issues = "https://github.com/hbmartin/betapert/issues"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "matplotlib>=3.9.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-random-order>=1.2.0",
    "ruff>=0.12.3",
    "scipy-stubs>=1.16.0.2",
    "ty>=0.0.1a15",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "betapert"
module-root = ""
source-include = ["tests/**", "pytest.ini"]

[tool.ruff]
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN001", "ANN201", "ANN202", "ARG001", "COM812", "D203", "D205", "D213", "D400", "D415", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN002", "ANN003", "ARG002", "ANN206", "D100", "D101", "D102", "D103", "D104", "D200", "D212", "D401", "D404", "E501", "E731", "EM101", "NPY002", "PLR2004", "PT011", "RET503", "S101", "SLF001", "TRY003"]
# The private ``rv_continuous`` hook overrides must stay unannotated to match scipy-stubs
"betapert/__init__.py" = ["ANN002", "ANN003", "ARG002"]
# The figure script needs matplotlib.use() before importing pyplot
"docs/*.py" = ["INP001", "E402", "ICN001", "D103", "PLR2004"]
"betapert/funcs.py" = ["D103", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
